# ML-MSc-capstone-project

./: README.md  changelog.md  group_features_using_clustering.ipynb  pyproject.toml  requirements.txt
demos/: demo_feature_clustering.ipynb  demo_titanic.ipynb
prototypes/: group_features_using_clustering.ipynb
src/feature_clustering/: dunn_index.py  feature_clustering.py
